updated index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Document</title>
+    <title>My Portfolio</title>
   </head>
   <body>
-    <p>hello world</p>
+    <!--Hero Header-->
+    <header class="hero-box">
+      <section class="hero-image-box">
+        <img class="hero-image" src="img/sky.jpeg" alt="main page image" />
+      </section>
+      <section class="hero-text-box">
+        <h1 class="hero-heading">Irem Hatipoglu</h1>
+        <p class="hero-text">
+          A diligent, passionate and versatile computer engineer who is a doer,
+          not a talker.
+        </p>
+      </section>
+    </header>
+    <!--End of Hero Header-->
+
+    <!--Portfolio-->
+
+    <!--End Portfolio-->
   </body>
 </html>
