--- a/index.html
+++ b/index.html
@@ -50,31 +50,69 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat
           asperiores enim ut nostrum modi omnis?
         </p>
-        <div class="about-social">
-          <a href="mailto:hatipoglu.irem@hotmail.com" aria-label="Link to Mail">
-            <i class="fa fa-envelope" aria-hidden="true"></i>
-          </a>
-          <a href="https://github.com/iremhttp" aria-label="Link to GitHub">
-            <i class="fab fa-github" aria-hidden="true"></i>
-          </a>
-          <a
-            href="www.linkedin.com/in/iremmhatipoglu"
-            aria-label="Link to Linkedin"
-          >
-            <i class="fab fa-linkedin" aria-hidden="true"></i>
-          </a>
-          <a
-            href="https://www.artstation.com/iremhttp"
-            aria-label="Link to ArtStation"
-          >
-            <i class="fab fa-artstation" aria-hidden="true"></i>
-          </a>
-        </div>
       </section>
       <section class="about-image">
         <img src="" alt="iremhttp profile picture" />
       </section>
       <!--End About-->
+    </section>
+    <!--Portfolio-->
+    <section id="portfolio" class="portfolio-container">
+      <h1>Projects</h1>
+      <!-- Images in the home page-->
+      <section class="portfolio-gallery">
+        <div class="gallery-item">
+          <a
+            href="img/sigun.png"
+            class="glightbox"
+            data-glightbox="title: My title; description: this is the slide description"
+          >
+            <img
+              src="img/sigun.png"
+              alt="image1 of portfolio"
+              class="gallery-img"
+            />
+          </a>
+        </div>
+
+        <div class="gallery-item">
+          <a
+            href="img/cvgenerator.png"
+            class="glightbox"
+            data-glightbox="title: My title; description: this is the slide description"
+          >
+            <img
+              src="img/cvgenerator.png"
+              alt="image2 of portfolio"
+              class="gallery-img"
+            />
+          </a>
+        </div>
+      </section>
+    </section>
+    <!--End Portfolio-->
+
+    <div class="about-social">
+      <a href="mailto:hatipoglu.irem@hotmail.com" aria-label="Link to Mail">
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+      </a>
+      <a href="https://github.com/iremhttp" aria-label="Link to GitHub">
+        <i class="fab fa-github" aria-hidden="true"></i>
+      </a>
+      <a
+        href="www.linkedin.com/in/iremmhatipoglu"
+        aria-label="Link to Linkedin"
+      >
+        <i class="fab fa-linkedin" aria-hidden="true"></i>
+      </a>
+      <a
+        href="https://www.artstation.com/iremhttp"
+        aria-label="Link to ArtStation"
+      >
+        <i class="fab fa-artstation" aria-hidden="true"></i>
+      </a>
+    </div>
+
     <script src="js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({ loop: true });
