--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
-    <title>My Portfolio</title>
+    <title>Irem's Portfolio</title>
   </head>
   <body>
     <!--Hero Header-->
@@ -29,13 +29,38 @@
           <a href="#about">
             <button type="button" class="hero-button">About Me</button>
           </a>
+          <a href="#skills">
+            <button type="button" class="hero-button">Skills</button>
+          </a>
+          <a href="#education">
+            <button type="button" class="hero-button">Education</button>
+          </a>
+          <a href="#experience">
+            <button type="button" class="hero-button">Experience</button>
+          </a>
           <a href="#portfolio">
             <button type="button" class="hero-button">Projects</button>
+          </a>
+          <a href="#contact">
+            <button type="button" class="hero-button">Contact</button>
           </a>
         </p>
       </section>
     </header>
     <!--End of Hero Header-->
+
+    <!--Begin Navbar-->
+    <section class="navbar">
+      <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#education">Education</a>
+        <a href="#experience">Experience</a>
+        <a href="#portfolio">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </section>
+    <!--End Navbar-->
     <!--Begin About-->
     <section id="about" class="about-container">
       <section class="about-text">
@@ -54,8 +79,53 @@
       <section class="about-image">
         <img src="" alt="iremhttp profile picture" />
       </section>
-      <!--End About-->
     </section>
+    <!--End About-->
+    <!--Begin Skills-->
+
+    <!--End Skills-->
+    <!--Begin Education-->
+    <section id="education" class="edu-container">
+      <h1>Education</h1>
+      <div class="edu-timeline">
+        <div class="container right">
+          <div class="content">
+            <div class="tag">
+              <h2>Bachelor of Computer Engineering</h2>
+            </div>
+            <div class="desc">
+              <h3>Izmir University of Economics</h3>
+              <p>September 2019 - Present</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container left">
+          <div class="content">
+            <div class="tag">
+              <h2>Computer Engineering</h2>
+            </div>
+            <div class="desc">
+              <h3>University of Applied Sciences Würzburg - Schweinfurt</h3>
+              <p>March 2022 - September 2022</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container right">
+          <div class="content">
+            <div class="tag">
+              <h2>Computer Science</h2>
+            </div>
+            <div class="desc">
+              <h3>Maynooth University</h3>
+              <p>September 2021 - February 2022</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--End Education-->
     <!--Portfolio-->
     <section id="portfolio" class="portfolio-container">
       <h1>Projects</h1>
@@ -116,6 +186,18 @@
     <script src="js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({ loop: true });
+    </script>
+    <script>
+      window.addEventListener("scroll", function () {
+        var header = document.querySelector("header");
+        var navbar = document.querySelector(".navbar");
+
+        if (window.pageYOffset > header.offsetHeight) {
+          navbar.classList.add("navbar-visible");
+        } else {
+          navbar.classList.remove("navbar-visible");
+        }
+      });
     </script>
   </body>
 </html>
