--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
     <title>Irem's Portfolio</title>
   </head>
   <body>
+    <!-- Begin Top Nav-->
+    <nav class="nav-bar top-nav">
+      <h1 class="logo"><a href="index.html">iremhttp</a></h1>
+      <ul class="nav-menu">
+        <li class="nav-item social-nav-item">
+          <a href="mailto:hatipoglu.irem@hotmail.com" aria-label="Link to Mail">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li class="nav-item social-nav-item">
+          <a href="https://github.com/iremhttp" aria-label="Link to GitHub">
+            <i class="fab fa-github" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li class="nav-item social-nav-item">
+          <a
+            href="www.linkedin.com/in/iremmhatipoglu"
+            aria-label="Link to Linkedin"
+          >
+            <i class="fab fa-linkedin" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li class="nav-item social-nav-item">
+          <a
+            href="https://www.artstation.com/iremhttp"
+            aria-label="Link to ArtStation"
+          >
+            <i class="fab fa-artstation" aria-hidden="true"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- End Top Nav-->
     <!--Hero Header-->
     <header class="hero-box">
       <section class="hero-image-box">
@@ -25,24 +58,10 @@
           A diligent, passionate and versatile computer engineer who is a doer,
           not a talker.
         </p>
+
         <p>
           <a href="#about">
             <button type="button" class="hero-button">About Me</button>
-          </a>
-          <a href="#skills">
-            <button type="button" class="hero-button">Skills</button>
-          </a>
-          <a href="#education">
-            <button type="button" class="hero-button">Education</button>
-          </a>
-          <a href="#experience">
-            <button type="button" class="hero-button">Experience</button>
-          </a>
-          <a href="#portfolio">
-            <button type="button" class="hero-button">Projects</button>
-          </a>
-          <a href="#contact">
-            <button type="button" class="hero-button">Contact</button>
           </a>
         </p>
       </section>
@@ -66,14 +85,16 @@
       <section class="about-text">
         <h1>About Me</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-          similique nemo eum recusandae nam enim amet eveniet facere earum?
-          Asperiores aliquid non autem! Officiis soluta, commodi voluptatem
-          aliquam quae nobis.
+          I am Irem Hatipoglu who is a computer engineering student at Izmir
+          University of Economics. I have always been interested in technology,
+          art, and foreign cultures, which led me to study Computer Engineering.
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat
-          asperiores enim ut nostrum modi omnis?
+          I studied programming languages such as Java, Python, and JavaScript,
+          as well as fundamentals of effective software design and engineering
+          practises, in a variety of software development classes. Throughout my
+          studies, I have completed projects that have provided me with great
+          experience in time management, problem solving, and teamwork.
         </p>
       </section>
       <section class="about-image">
@@ -82,7 +103,9 @@
     </section>
     <!--End About-->
     <!--Begin Skills-->
-
+    <section id="skills" class="skills-container">
+      <h1>Skills</h1>
+    </section>
     <!--End Skills-->
     <!--Begin Education-->
     <section id="education" class="edu-container">
