Education section updated.

--- a/index.html
+++ b/index.html
@@ -111,40 +111,38 @@
     <!--Begin Education-->
     <section id="education" class="edu-container">
       <h1>Education</h1>
-      <div class="edu-timeline">
-        <div class="container right">
-          <div class="content">
-            <div class="tag">
-              <h2>Bachelor of Computer Engineering</h2>
-            </div>
-            <div class="desc">
-              <h3>Izmir University of Economics</h3>
-              <p>September 2019 - Present</p>
-            </div>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-photo">
+            <img src="img/ieu.png" />
+          </div>
+          <div class="timeline-headline">
+            <p class="timeline-subtitle">Sep 2019 - present</p>
+            <h2 class="timeline-title">Bachelor of Computer Engineering</h2>
+            <p class="timeline-excerpt">Izmir University of Economics</p>
           </div>
         </div>
-
-        <div class="container left">
-          <div class="content">
-            <div class="tag">
-              <h2>Computer Engineering</h2>
-            </div>
-            <div class="desc">
-              <h3>University of Applied Sciences Würzburg - Schweinfurt</h3>
-              <p>March 2022 - September 2022</p>
-            </div>
+        <div class="timeline-item">
+          <div class="timeline-photo">
+            <img src="img/fhws.png" />
+          </div>
+          <div class="timeline-headline">
+            <p class="timeline-subtitle">Mar 2022 - Sep 2022</p>
+            <h2 class="timeline-title">Bachelor of Computer Engineering</h2>
+            <p class="timeline-excerpt">
+              Technical University of Applied Sciences Würzburg - Schweinfurt
+              (ERASMUS+)
+            </p>
           </div>
         </div>
-
-        <div class="container right">
-          <div class="content">
-            <div class="tag">
-              <h2>Computer Science</h2>
-            </div>
-            <div class="desc">
-              <h3>Maynooth University</h3>
-              <p>September 2021 - February 2022</p>
-            </div>
+        <div class="timeline-item">
+          <div class="timeline-photo">
+            <img src="img/mu.png" />
+          </div>
+          <div class="timeline-headline">
+            <p class="timeline-subtitle">Sep 2021 - Feb 2022</p>
+            <h2 class="timeline-title">Bachelor of Computer Science</h2>
+            <p class="timeline-excerpt">Maynooth University (ERASMUS+)</p>
           </div>
         </div>
       </div>
