About section updated.

--- a/index.html
+++ b/index.html
@@ -83,24 +83,25 @@
     <!--End Navbar-->
     <!--Begin About-->
     <section id="about" class="about-container">
-      <section class="about-text">
-        <h1>About Me</h1>
-        <p>
-          I am Irem Hatipoglu who is a computer engineering student at Izmir
-          University of Economics. I have always been interested in technology,
-          art, and foreign cultures, which led me to study Computer Engineering.
-        </p>
-        <p>
-          I studied programming languages such as Java, Python, and JavaScript,
-          as well as fundamentals of effective software design and engineering
-          practises, in a variety of software development classes. Throughout my
-          studies, I have completed projects that have provided me with great
-          experience in time management, problem solving, and teamwork.
-        </p>
-      </section>
-      <section class="about-image">
-        <img src="" alt="iremhttp profile picture" />
-      </section>
+      <div class="about-circle">
+        <section class="about-text">
+          <h1>About Me</h1>
+          <p>
+            I am Irem Hatipoglu who is a computer engineering student at Izmir
+            University of Economics. I have always been interested in
+            technology, art, and foreign cultures, which led me to study
+            Computer Engineering.
+          </p>
+          <p>
+            Throughout my studies and professional career, I have completed
+            projects that have given me valuable expertise in time management,
+            issue solving, and teamwork.
+          </p>
+        </section>
+        <section class="about-image">
+          <img src="img/profilepicture.png" alt="iremhttp picture" />
+        </section>
+      </div>
     </section>
     <!--End About-->
     <!--Begin Skills-->
