Language bar added.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
-    <title>Irem's Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css"
+    />
+    <title>Irem Hatipoglu Portfolio</title>
   </head>
   <body>
     <!-- Begin Top Nav-->
@@ -162,11 +166,66 @@
           <div class="serviceBox">
             <div class="service-icon fas fa-cogs"></div>
             <h3 class="title">Hard Skills</h3>
-            <p class="description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab dolor
-              eveniet repellat, natus deleniti consequuntur explicabo nesciunt
-              vel saepe qui! Voluptates vitae magnam expedita excepturi
-              quibusdam obcaecati illo. Ipsam, omnis?
+            <p class="description icons">
+              <i
+                class="devicon-java-plain-wordmark"
+                style="color: rgb(87, 86, 86)"
+                width
+              ></i>
+
+              <i
+                class="devicon-javascript-plain"
+                style="color: rgb(87, 86, 86)"
+              ></i>
+
+              <i
+                class="devicon-python-plain-wordmark"
+                style="color: rgb(87, 86, 86)"
+              ></i>
+
+              <i
+                class="devicon-html5-plain-wordmark"
+                style="color: rgb(87, 86, 86)"
+              ></i>
+
+              <i
+                class="devicon-css3-plain-wordmark"
+                style="color: rgb(87, 86, 86)"
+              ></i>
+
+              <i
+                class="devicon-mysql-plain-wordmark"
+                style="color: rgb(87, 86, 86)"
+              ></i>
+
+              <i class="devicon-linux-plain" style="color: rgb(87, 86, 86)"></i>
+
+              <i
+                class="devicon-react-original-wordmark"
+                style="color: rgb(87, 86, 86)"
+              ></i>
+
+              <!--tools-->
+
+              <i
+                class="devicon-jupyter-plain-wordmark"
+                style="color: rgb(87, 86, 86)"
+              ></i>
+
+              <i
+                class="devicon-pycharm-plain-wordmark"
+                style="color: rgb(87, 86, 86)"
+              ></i>
+
+              <i
+                class="devicon-visualstudio-plain-wordmark"
+                style="color: rgb(87, 86, 86)"
+              ></i>
+
+              <i
+                class="devicon-blender-original-wordmark"
+                style="color: rgb(87, 86, 86)"
+              ></i>
             </p>
           </div>
         </div>
@@ -181,7 +240,101 @@
           <div class="serviceBox">
             <div class="service-icon fa fa-globe"></div>
             <h3 class="title">Languages</h3>
-            <p class="description"></p>
+            <p class="description languages">
+              <ul class="progress">
+                <!--  Item1  -->
+                <li data-name="Turkish" data-percent="C2">
+                  <svg viewBox="-10 -10 220 220">
+                  <g fill="none" stroke-width="9" transform="translate(100,100)">
+                  <path d="M 0,-100 A 100,100 0 0,1 86.6,-50" stroke="url(#cl1)"/>
+                  <path d="M 86.6,-50 A 100,100 0 0,1 86.6,50" stroke="url(#cl2)"/>
+                  <path d="M 86.6,50 A 100,100 0 0,1 0,100" stroke="url(#cl3)"/>
+                  <path d="M 0,100 A 100,100 0 0,1 -86.6,50" stroke="url(#cl4)"/>
+                  <path d="M -86.6,50 A 100,100 0 0,1 -86.6,-50" stroke="url(#cl5)"/>
+                  <path d="M -86.6,-50 A 100,100 0 0,1 0,-100" stroke="url(#cl6)"/>
+                  </g>
+                  </svg>
+                  <svg viewBox="-10 -10 220 220">
+                  <path d="M200,100 C200,44.771525 155.228475,0 100,0 C44.771525,0 0,44.771525 0,100 C0,155.228475 44.771525,200 100,200 C155.228475,200 200,155.228475 200,100 Z" stroke-dashoffset="629"></path>
+                  </svg>
+              </li> 
+                <!--  Item2  -->
+                
+                <li data-name="English" data-percent="C1">
+                  <svg viewBox="-10 -10 220 220">
+                  <g fill="none" stroke-width="9" transform="translate(100,100)">
+                  <path d="M 0,-100 A 100,100 0 0,1 86.6,-50" stroke="url(#cl1)"/>
+                  <path d="M 86.6,-50 A 100,100 0 0,1 86.6,50" stroke="url(#cl2)"/>
+                  <path d="M 86.6,50 A 100,100 0 0,1 0,100" stroke="url(#cl3)"/>
+                  <path d="M 0,100 A 100,100 0 0,1 -86.6,50" stroke="url(#cl4)"/>
+                  <path d="M -86.6,50 A 100,100 0 0,1 -86.6,-50" stroke="url(#cl5)"/>
+                  <path d="M -86.6,-50 A 100,100 0 0,1 0,-100" stroke="url(#cl6)"/>
+                  </g>
+                  </svg>
+                  <svg viewBox="-10 -10 220 220">
+                  <path d="M200,100 C200,44.771525 155.228475,0 100,0 C44.771525,0 0,44.771525 0,100 C0,155.228475 44.771525,200 100,200 C155.228475,200 200,155.228475 200,100 Z" stroke-dashoffset="547"></path>
+                  </svg>
+              </li> 
+              <li data-name="German" data-percent="A2">
+                <svg viewBox="-10 -10 220 220">
+                <g fill="none" stroke-width="9" transform="translate(100,100)">
+                <path d="M 0,-100 A 100,100 0 0,1 86.6,-50" stroke="url(#cl1)"/>
+                <path d="M 86.6,-50 A 100,100 0 0,1 86.6,50" stroke="url(#cl2)"/>
+                <path d="M 86.6,50 A 100,100 0 0,1 0,100" stroke="url(#cl3)"/>
+                <path d="M 0,100 A 100,100 0 0,1 -86.6,50" stroke="url(#cl4)"/>
+                <path d="M -86.6,50 A 100,100 0 0,1 -86.6,-50" stroke="url(#cl5)"/>
+                <path d="M -86.6,-50 A 100,100 0 0,1 0,-100" stroke="url(#cl6)"/>
+                </g>
+                </svg>
+                <svg viewBox="-10 -10 220 220">
+                <path d="M200,100 C200,44.771525 155.228475,0 100,0 C44.771525,0 0,44.771525 0,100 C0,155.228475 44.771525,200 100,200 C155.228475,200 200,155.228475 200,100 Z" stroke-dashoffset="250"></path>
+                </svg>
+            </li> 
+            <li data-name="Chinese" data-percent="A2">
+              <svg viewBox="-10 -10 220 220">
+              <g fill="none" stroke-width="9" transform="translate(100,100)">
+              <path d="M 0,-100 A 100,100 0 0,1 86.6,-50" stroke="url(#cl1)"/>
+              <path d="M 86.6,-50 A 100,100 0 0,1 86.6,50" stroke="url(#cl2)"/>
+              <path d="M 86.6,50 A 100,100 0 0,1 0,100" stroke="url(#cl3)"/>
+              <path d="M 0,100 A 100,100 0 0,1 -86.6,50" stroke="url(#cl4)"/>
+              <path d="M -86.6,50 A 100,100 0 0,1 -86.6,-50" stroke="url(#cl5)"/>
+              <path d="M -86.6,-50 A 100,100 0 0,1 0,-100" stroke="url(#cl6)"/>
+              </g>
+              </svg>
+              <svg viewBox="-10 -10 220 220">
+              <path d="M200,100 C200,44.771525 155.228475,0 100,0 C44.771525,0 0,44.771525 0,100 C0,155.228475 44.771525,200 100,200 C155.228475,200 200,155.228475 200,100 Z" stroke-dashoffset="250"></path>
+              </svg>
+          </li> 
+              </ul>
+              <svg width="0" height="0">
+                <defs>
+                <linearGradient id="cl1" gradientUnits="objectBoundingBox" x1="0" y1="0" x2="1" y2="1">
+                  <stop stop-color="#618099"/>
+                  <stop offset="100%" stop-color="#8e6677"/>
+                </linearGradient>
+                <linearGradient id="cl2" gradientUnits="objectBoundingBox" x1="0" y1="0" x2="0" y2="1">
+                  <stop stop-color="#8e6677"/>
+                  <stop offset="100%" stop-color="#9b5e67"/>
+                </linearGradient>
+                <linearGradient id="cl3" gradientUnits="objectBoundingBox" x1="1" y1="0" x2="0" y2="1">
+                  <stop stop-color="#9b5e67"/>
+                  <stop offset="100%" stop-color="#9c787a"/>
+                </linearGradient>
+                <linearGradient id="cl4" gradientUnits="objectBoundingBox" x1="1" y1="1" x2="0" y2="0">
+                  <stop stop-color="#9c787a"/>
+                  <stop offset="100%" stop-color="#817a94"/>
+                </linearGradient>
+                <linearGradient id="cl5" gradientUnits="objectBoundingBox" x1="0" y1="1" x2="0" y2="0">
+                  <stop stop-color="#817a94"/>
+                  <stop offset="100%" stop-color="#498a98"/>
+                </linearGradient>
+                <linearGradient id="cl6" gradientUnits="objectBoundingBox" x1="0" y1="1" x2="1" y2="0">
+                  <stop stop-color="#498a98"/>
+                  <stop offset="100%" stop-color="#618099"/>
+                </linearGradient>
+                </defs>
+                </svg>
+            </p>
           </div>
         </div>
       </div>
@@ -286,14 +439,29 @@
     </script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        const serviceBoxes = document.querySelectorAll(".serviceBox");
+  const serviceBoxes = document.querySelectorAll(".serviceBox");
 
-        serviceBoxes.forEach(function (box) {
-          box.addEventListener("click", function () {
-            this.classList.toggle("active");
-          });
-        });
-      });
+  serviceBoxes.forEach(function (box) {
+    box.addEventListener("click", function () {
+      this.classList.toggle("active");
+      const description = this.querySelector(".description");
+      description.classList.toggle("active");
+
+      if (this.classList.contains("active")) {
+        // Check if the clicked serviceBox is the "Languages" serviceBox
+        const title = this.querySelector(".title").textContent.trim();
+        if (title === "Languages") {
+          const progress = this.querySelector(".progress");
+          progress.style.display = "block";
+        }
+      } else {
+        const progress = this.querySelector(".progress");
+        progress.style.display = "none";
+      }
+    });
+  });
+});
+
     </script>
   </body>
 </html>
