--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="col-md-3 col-sm-6">
           <div class="serviceBox">
             <div class="service-icon fas fa-cogs"></div>
-            <h3 class="title">Hard Skills</h3>
+            <h3 class="title">Programming Skills</h3>
             <p class="description icons">
               <i
                 class="devicon-java-plain-wordmark"
@@ -229,20 +229,13 @@
             </p>
           </div>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <div class="serviceBox">
-            <div class="service-icon fas fa-users"></div>
-            <h3 class="title">Soft Skills</h3>
-            <p class="description"></p>
-          </div>
-        </div>
+        
         <div class="col-md-3 col-sm-6">
           <div class="serviceBox">
             <div class="service-icon fa fa-globe"></div>
             <h3 class="title">Languages</h3>
             <p class="description languages">
               <ul class="progress">
-                <!--  Item1  -->
                 <li data-name="Turkish" data-percent="C2">
                   <svg viewBox="-10 -10 220 220">
                   <g fill="none" stroke-width="9" transform="translate(100,100)">
@@ -258,8 +251,6 @@
                   <path d="M200,100 C200,44.771525 155.228475,0 100,0 C44.771525,0 0,44.771525 0,100 C0,155.228475 44.771525,200 100,200 C155.228475,200 200,155.228475 200,100 Z" stroke-dashoffset="629"></path>
                   </svg>
               </li> 
-                <!--  Item2  -->
-                
                 <li data-name="English" data-percent="C1">
                   <svg viewBox="-10 -10 220 220">
                   <g fill="none" stroke-width="9" transform="translate(100,100)">
