Portfolio section updated.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="col-md-3 col-sm-6">
           <div class="serviceBox">
             <div class="service-icon fas fa-cogs"></div>
-            <h3 class="title">Programming Skills</h3>
+            <h3 class="title">Programming</h3>
             <p class="description icons">
               <i
                 class="devicon-java-plain-wordmark"
@@ -333,14 +333,19 @@
     <!--End Skills-->
     <!--Portfolio-->
     <section id="portfolio" class="portfolio-container">
-      <h1>Projects</h1>
+      <h1>PORTFOLIO</h1>
+      <h2>Take a Look At My Projects </h2>
+      <div class="port-description">
+        <p>Here are some of my projects. For further information please visit my github account.</p>
+      </div>
       <!-- Images in the home page-->
       <section class="portfolio-gallery">
+        
         <div class="gallery-item">
           <a
             href="img/sigun.png"
             class="glightbox"
-            data-glightbox="title: My title; description: this is the slide description"
+            data-glightbox="title: Turkish Programming Language; description: Unlike existing programming languages, Sigun programming language is specifically designed for native Turkish speakers, with the goal of not only translating English syntax into Turkish but also embodying the naturalness and advantage of coding in one’s own language. Our project aims to create a unique syntax structure for Turkish programming languages by emphasizing the naturalness of the language, and to surpass similar projects.To accomplish this, we are using a combination of LALR parsing and syntax-directed translation methodologies. "
           >
             <img
               src="img/sigun.png"
@@ -354,11 +359,24 @@
           <a
             href="img/cvgenerator.png"
             class="glightbox"
-            data-glightbox="title: My title; description: this is the slide description"
+            data-glightbox="title: CV Generator App; description: The CV Generator desktop application allows you to store many CVs in the application, write information about the CV owner, and easily collect the information contained in the system about the CV owner you want."
           >
             <img
               src="img/cvgenerator.png"
               alt="image2 of portfolio"
+              class="gallery-img"
+            />
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a
+            href="img/hero.png"
+            class="glightbox"
+            data-glightbox="title: Hero of The Dungeon; description: A Java text-based hack and slash game. The user is able to create their own hero and throughout the story, their choices changes the path they are following."
+          >
+            <img
+              src="img/hero.png"
+              alt="image3 of portfolio"
               class="gallery-img"
             />
           </a>
