--- a/index.html
+++ b/index.html
@@ -90,15 +90,14 @@
     <section class="about-text">
       <h1>About Me</h1>
       <p>
-        I am Irem Hatipoglu who is a computer engineering student at Izmir
-        University of Economics. I have always been interested in
-        technology, art, and foreign cultures, which led me to study
-        Computer Engineering and then Artificial Intelligence.
+        I'm Irem Hatipoglu, currently pursuing a Master of Science in Artificial Intelligence 
+        with a previous Bachelor's degree in Computer Engineering. My passion for technology, art, and diverse cultures 
+        has guided my academic and professional journey. 
       </p>
       <p>
-        Throughout my studies and professional career, I have completed
-        projects that have given me valuable expertise in time management,
-        issue solving, and teamwork.
+        This path has equipped me with essential skills in time management, 
+        problem-solving, and effective teamwork, which I have honed through various projects. Furthermore, I've had the opportunity to explore 
+        different kinds of programming languages, including Java, Python, and others, which has increased my range of skills in the field of computer science. 
       </p>
     </section>
   </div>
