--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </li>
         <li class="nav-item social-nav-item">
           <a
-            href="www.linkedin.com/in/iremmhatipoglu"
+            href="https://www.linkedin.com/in/iremmhatipoglu/"
             aria-label="Link to Linkedin"
           >
             <i class="fab fa-linkedin" aria-hidden="true"></i>
